--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   },
   "jest": {
     "transform": {
-      "^.+\\.[t|j]sx?$": "babel-jest"
+      "^.+\\.(js|ts)$": "babel-jest"
     }
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
+    "@babel/preset-flow": "^7.27.1",
     "@types/jest": "^30.0.0",
     "babel-jest": "^30.2.0",
     "jest": "^30.2.0",
     "prisma": "^7.2.0"
+  },
+  "dependencies": {
+    "@prisma/adapter-mariadb": "^7.2.0",
+    "@prisma/client": "^7.2.0",
+    "dotenv": "^17.2.3"
   }
 }
